--- a/OHET_Project/OHET_Project/OHET_Project.csproj
+++ b/OHET_Project/OHET_Project/OHET_Project.csproj
@@ -223,6 +223,10 @@
     <Compile Include="Migrations\201812311319087_CascadeOnDelete.Designer.cs">
       <DependentUpon>201812311319087_CascadeOnDelete.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201901162001300_Validation.cs" />
+    <Compile Include="Migrations\201901162001300_Validation.Designer.cs">
+      <DependentUpon>201901162001300_Validation.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -234,14 +238,12 @@
     <Compile Include="Models\models\Comment.cs" />
     <Compile Include="Models\models\Content.cs" />
     <Compile Include="Models\models\FavCon.cs" />
-    <Compile Include="Models\models\Fistcaster.cs" />
     <Compile Include="Models\models\Hero.cs" />
     <Compile Include="Models\models\Item.cs" />
     <Compile Include="Models\models\Monster.cs" />
     <Compile Include="Models\models\Post.cs" />
     <Compile Include="Models\models\Rule.cs" />
     <Compile Include="Models\models\Spell.cs" />
-    <Compile Include="Models\models\Spellcaster.cs" />
     <Compile Include="Models\models\Subpost.cs" />
     <Compile Include="Models\ViewModel\ContentViewModel.cs" />
     <Compile Include="Persistence\DbContext.cs" />
@@ -447,6 +449,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201812311319087_CascadeOnDelete.resx">
       <DependentUpon>201812311319087_CascadeOnDelete.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201901162001300_Validation.resx">
+      <DependentUpon>201901162001300_Validation.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
