--- a/OHET_Project/OHET_Project/OHET_Project.csproj
+++ b/OHET_Project/OHET_Project/OHET_Project.csproj
@@ -189,23 +189,6 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201901181837315_HeroClassNotNull.cs" />
-    <Compile Include="Migrations\201901181837315_HeroClassNotNull.Designer.cs">
-      <DependentUpon>201901181837315_HeroClassNotNull.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201901201325485_ItemConceptFix.cs" />
-    <Compile Include="Migrations\201901201325485_ItemConceptFix.Designer.cs">
-      <DependentUpon>201901201325485_ItemConceptFix.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201901231300494_ClassCascadeOnDelete.cs" />
-    <Compile Include="Migrations\201901231300494_ClassCascadeOnDelete.Designer.cs">
-      <DependentUpon>201901231300494_ClassCascadeOnDelete.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201901231434102_OneClassManySpells.cs" />
-    <Compile Include="Migrations\201901231434102_OneClassManySpells.Designer.cs">
-      <DependentUpon>201901231434102_OneClassManySpells.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
@@ -394,6 +377,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Migrations\" />
     <Folder Include="Views\Image\" />
   </ItemGroup>
   <ItemGroup>
@@ -403,20 +387,6 @@
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Migrations\201901181837315_HeroClassNotNull.resx">
-      <DependentUpon>201901181837315_HeroClassNotNull.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201901201325485_ItemConceptFix.resx">
-      <DependentUpon>201901201325485_ItemConceptFix.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201901231300494_ClassCascadeOnDelete.resx">
-      <DependentUpon>201901231300494_ClassCascadeOnDelete.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201901231434102_OneClassManySpells.resx">
-      <DependentUpon>201901231434102_OneClassManySpells.cs</DependentUpon>
-    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
