--- a/OHET_Project/OHET_Project/Web.config
+++ b/OHET_Project/OHET_Project/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
   <!--  <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-OHET_Project-20180427111458.mdf;Initial Catalog=aspnet-OHET_Project-20180427111458;Integrated Security=True" providerName="System.Data.SqlClient" />-->
-    <add name="DefaultConnection" connectionString="Data Source=db-mssql;Initial Catalog=s13711;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=ohet.database.windows.net;Initial Catalog=pjatk;Persist Security Info=True;User ID=s13711;Password=Ziemniak123" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
